2007-01-30  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		fix incorrect switching between new panning tool and
		the other tools.

2007-01-30  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/tools/PanInteractor.java:
		added. Panning tool. pressing shift is no longer needed.

	* src/de/intevation/printlayout/LayoutFrame.java:
		deactivates default panning tool and uses our custom one.

2007-01-30  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Doing the 0.8.2 release.

	* src/de/intevation/printlayout/InfoDialog.java: Version to 0.8.2.

	* Changes.txt: Changes for 0.8.2.

2007-01-30  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* HowTo-Release.txt:
		added a 'clean' to the 'ant dist' line. -> 'ant clean dist'
		to avoid that old garbage makes its way into the release.

	* src/de/intevation/printlayout/I18N.java,
	  src/de/intevation/printlayout/LayoutFrame.java:
		added a few extra 'if's to make i18n more null pointer bullet proof.

2007-01-30  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* HowTo-Release.txt: New. Guide for doing a release.

2007-01-30  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* INSTALL.txt: Added hint for Windows.

2007-01-30  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Doing the 0.8.1 release.

	* Changes.txt: New. Describes the overall change history for users.

	* src/de/intevation/printlayout/InfoDialog.java: Version to 0.8.1.

2007-01-30  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* INSTALL.txt: New. Describes how to install when receiving
	only the jar file. Intended to accompany the jar file.

2007-01-30  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/i18n/messages.properties:
		correct typo in messages.

2007-01-30  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/i18n/messages.properties: