@@ -1,3 +1,13 @@
+2007-01-31  Sascha L. Teichmann  <sascha.teichmann@intevation.de>
+
+	* src/de/intevation/printlayout/tools/PickingInteractor.java:
+		make stroke of selection 3px wide and break the stroke
+		each 5px. Color is still red. TODO: discuss if e.g. 
+		XOR mode gives better optical feedback to the user.
+
+	* src/de/intevation/printlayout/ScaleBarUpdater.java:
+		removed needless import.
+
 2007-01-30  Sascha L. Teichmann  <sascha.teichmann@intevation.de>
 
 	* src/de/intevation/printlayout/LayoutFrame.java:
